# sbmpo-benchmarking

./: .gitmodules  CMakeLists.txt
docker/: sbmpo_docker.sh
sbmpo_benchmarking/: CMakeLists.txt
sbmpo_benchmarking/csv/: config.csv  obstacles.csv  stats.csv
sbmpo_benchmarking/csv/saved/: stats_0500_0375_250.csv  stats_0625_0375_50.csv  stats_HT00105_GR0010375_75x75_25obs.csv  stats_HT00505_GR010375_50x50_50.csv  stats_HT00505_GR010375_75x75_single.csv  stats_HT0115_GR0110_100x100_single.csv
sbmpo_benchmarking/matlab/: HTvsGRResults.m  Obstacles2DResults.m  UnicycleSteeringConfig.m  UnicycleSteeringConfigHTvGR.asv  UnicycleSteeringConfigHTvGR.m
sbmpo_benchmarking/matlab/others/: grid_resolution.m
sbmpo_benchmarking/matlab/others/compare_queue/: compare.m  stats1.mat  stats2.mat
sbmpo_benchmarking/matlab/others/fgh_analysis/: analysis.m
sbmpo_benchmarking/src/: double_integrator_benchmark.cpp  unicycle_steering_benchmark.cpp
